fixed buttons for older verion mobiles

--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: transparent;
+  background-color: #f0fdf4;
   color: #111827;
   cursor: pointer;
   transition: border-color 0.25s;
